feat: improve type resolution in JDK 11+ syntax, bump Vineflower

--- a/package.json
+++ b/package.json
@@ -14,25 +14,25 @@
         "types": "node ./scripts/types.js"
     },
     "dependencies": {
-        "@codemirror/commands": "^6.10.0",
-        "@codemirror/lang-java": "^6.0.2",
+        "@codemirror/commands": "^6.10.2",
         "@codemirror/lang-json": "^6.0.2",
         "@codemirror/lang-xml": "^6.1.0",
         "@codemirror/lang-yaml": "^6.1.2",
-        "@codemirror/language": "^6.11.3",
+        "@codemirror/language": "^6.12.1",
         "@codemirror/legacy-modes": "^6.5.2",
-        "@codemirror/search": "^6.5.11",
-        "@codemirror/state": "^6.5.2",
-        "@codemirror/view": "^6.39.11",
+        "@codemirror/search": "^6.6.0",
+        "@codemirror/state": "^6.5.4",
+        "@codemirror/view": "^6.39.15",
         "@katana-project/asm": "^0.24.0",
-        "@katana-project/laser": "^0.2.4",
+        "@katana-project/laser": "^0.3.1",
         "@katana-project/zip": "^0.7.1",
         "@lezer/highlight": "^1.2.3",
         "@run-slicer/cfr": "0.1.6-0.152",
         "@run-slicer/jasm": "0.4.5-2.8.0",
+        "@run-slicer/lezer-java": "^1.2.1",
         "@run-slicer/procyon": "0.1.2-0.6.0",
         "@run-slicer/script": "^0.12.0",
-        "@run-slicer/vf": "0.3.1-1.11.2",
+        "@run-slicer/vf": "0.5.0-1.11.2",
         "@tanstack/table-core": "^8.21.3",
         "@xyflow/svelte": "1.5.0",
         "client-zip": "^2.5.0",
